added functionality to choose point reads for single item partition requests